--- a/dataset/data.yaml
+++ b/dataset/data.yaml
@@ -19,9 +19,9 @@ names: [
 ,'pulled pork'
 ,'hamburger'
 ,'cavity'
-,'ahmed'
-,'aziz'
-,'bokri'
-,'louay'
-,'yassine'
+,'21293' #ahmed
+,'21199' #aziz
+,'21266' #bokri
+,'21222' #louay
+,'21318' #yassine
 ]
