--- a/requirements.txt
+++ b/requirements.txt
@@ -1,105 +1,51 @@
-asttokens==3.0.0
-Brotli
-CacheControl==0.14.1
-cachetools==5.5.0
-certifi
-cffi
-charset-normalizer
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.1
-cryptography==43.0.3
-cycler==0.12.1
-debugpy==1.8.11
-decorator==5.1.1
-exceptiongroup==1.2.2
-executing==2.1.0
-filelock
+# YOLOv5 requirements
+# Usage: pip install -r requirements.txt
+
+# Base ------------------------------------------------------------------------
+gitpython>=3.1.30
+matplotlib>=3.3
+numpy>=1.23.5
+opencv-python>=4.1.1
+pillow>=10.3.0
+psutil  # system resources
+PyYAML>=5.3.1
+requests>=2.32.2
+scipy>=1.4.1
+thop>=0.1.1  # FLOPs computation
+torch>=1.8.0  # see https://pytorch.org/get-started/locally (recommended)
+torchvision>=0.9.0
+tqdm>=4.66.3
+ultralytics>=8.2.34  # https://ultralytics.com
 firebase-admin==6.6.0
-fonttools==4.55.0
-fsspec==2024.10.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-api-core==2.23.0
-google-api-python-client==2.154.0
-google-auth==2.36.0
-google-auth-httplib2==0.2.0
-google-cloud-core==2.4.1
-google-cloud-firestore==2.19.0
-google-cloud-storage==2.18.2
-google-crc32c==1.6.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.66.0
-grpcio==1.68.0
-grpcio-status==1.68.0
-h2
-hpack==4.0.0
-httplib2==0.22.0
-hyperframe
-idna
-importlib_metadata
-ipykernel==6.29.5
-ipython==8.31.0
-jedi==0.19.2
-Jinja2
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kiwisolver==1.4.7
-MarkupSafe
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mpmath
-msgpack==1.1.0
-nest-asyncio==1.6.0
-networkx
-numpy
-opencv-python==4.10.0.84
-packaging
-pandas==2.2.3
-parso==0.8.4
-pickleshare
-pillow
-platformdirs==4.3.6
-prompt_toolkit==3.0.48
-proto-plus==1.25.0
-protobuf==5.28.3
-psutil==6.1.1
-pure_eval==0.2.3
-py-cpuinfo==9.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser
-Pygments
-PyJWT==2.10.0
-pyparsing==3.2.0
-PySocks
-python-dateutil==2.9.0.post0
 pytz==2024.2
-pywin32==308
-PyYAML
-pyzmq==26.2.0
-requests
-rsa==4.9
-scipy==1.14.1
-seaborn==0.13.2
-six
-smmap==5.0.1
-stack-data==0.6.3
-sympy==1.13.1
-thop==0.1.1.post2209072238
-torch==2.5.1
-torchaudio==2.5.1
-torchvision==0.20.1
-tornado==6.4.2
-tqdm==4.67.0
-traitlets==5.14.3
-typing_extensions
-tzdata==2024.2
-ultralytics==8.3.31
-ultralytics-thop==2.0.11
-uritemplate==4.1.1
-urllib3
-wcwidth==0.2.13
-win_inet_pton
-zipp
-zstandard==0.23.0
+# protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
+
+# Logging ---------------------------------------------------------------------
+# tensorboard>=2.4.1
+# clearml>=1.2.0
+# comet
+
+# Plotting --------------------------------------------------------------------
+pandas>=1.1.4
+seaborn>=0.11.0
+
+# Export ----------------------------------------------------------------------
+# coremltools>=6.0  # CoreML export
+# onnx>=1.10.0  # ONNX export
+# onnx-simplifier>=0.4.1  # ONNX simplifier
+# nvidia-pyindex  # TensorRT export
+# nvidia-tensorrt  # TensorRT export
+# scikit-learn<=1.1.2  # CoreML quantization
+# tensorflow>=2.4.0,<=2.13.1  # TF exports (-cpu, -aarch64, -macos)
+# tensorflowjs>=3.9.0  # TF.js export
+# openvino-dev>=2023.0  # OpenVINO export
+
+# Deploy ----------------------------------------------------------------------
+setuptools>=70.0.0 # Snyk vulnerability fix
+# tritonclient[all]~=2.24.0
+
+# Extras ----------------------------------------------------------------------
+# ipython  # interactive notebook
+# mss  # screenshots
+# albumentations>=1.0.3
+# pycocotools>=2.0.6  # COCO mAP
